<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F000000">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/text_game_over"
        app:layout_constraintStart_toStartOf="@+id/text_game_over"
        app:layout_constraintTop_toBottomOf="@+id/text_game_over"
        app:textAllCaps="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_scores_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/initial_score"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/text_scores"
        app:layout_constraintTop_toBottomOf="@+id/text_game_over"
        app:textAllCaps="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_menu"
        style="@style/CustomMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/button_bg"
        android:text="@string/menu"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_scores" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_restart"
        style="@style/CustomMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/restart"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>